# omamefs

./: CMakeLists.txt  LICENSE  README.md
src/: base.c  debug.c  main.c  omamefs_spec.h
